Changes to search query

--- a/ethnode/webui/mixins/header.jade
+++ b/ethnode/webui/mixins/header.jade
@@ -18,8 +18,8 @@ header.main-header
 
                 form(action="#" style="float: left; max-height: 62px;")
                     .ui.action.input(style="margin-left: 25px; margin-top: 10px")
-                        input#search-header(type="text", placeholder="Search...")
-                        button.ui.button Search
+                        input#search-header(type="text", placeholder="Search gigs...")
+                        button#search-button.ui.button Search
 
             // Navbar items ONLY for larger than mobile screens.
             .collapse.navbar-collapse#navigation
