--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -24,6 +24,14 @@ section.profiles-page-content
                 label.mdl-checkbox
                     margin-left: 15px
 
+                    &.is-wrong
+
+                        .mdl-checkbox__box-outline
+                            border: 2px solid #d50000
+
+                            .mdl-checkbox__tick-outline
+                                background-color: #d50000
+
 
         // GIGS --- RIGHT
         .gigs
