Load more gigs when you scroll down + gig inner modal

--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -14,6 +14,7 @@
 
 // IMPORTING NEW STYLES FOR MODALS
 @import "newstyles/modals"
+@import "newstyles/gig-inner"
 
 // Responsiveness
 @import "responsive/screen-medium"
