--- a/ethnode/webui/mixins/modals/gig/modal-gig.jade
+++ b/ethnode/webui/mixins/modals/gig/modal-gig.jade
@@ -1,8 +1,5 @@
 .modal.fade.timeline#gigModal(tabindex="-1", role="dialog", aria-labelledby="myModalLabel")
     .modal-dialog.modal-lg(role="document")
-        .modal-content.col-lg-12.col-md-12.col-sm-12.col-xs-12
+        .modal-content.col-xs-12
 
-            .modal-body.col-lg-12.col-md-12.col-sm-12.col-xs-12
-
-                .post
-                    p.timeline-text There is going to be extended information about the GIG.
+            // JSON AJAX DATA GOES HERE
