--- a/ethnode/webui/styles/main.css
+++ b/ethnode/webui/styles/main.css
@@ -2168,6 +2168,434 @@ section.profiles-page-content .container .gigs .gigs-container .gig .footer h4 s
   max-height: 90vh;
 }
 
+#timeline {
+  background-color: #f2f2f2;
+}
+
+#timeline ul {
+  padding: 0;
+  overflow: auto;
+  float: left;
+  list-style-type: none;
+}
+
+#timeline ul li.swipeout {
+  overflow: hidden;
+}
+
+.modal.timeline .modal-dialog .modal-content {
+  padding: 0;
+}
+
+.timeline-post {
+  max-height: 320px;
+}
+
+.timeline-post .post p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  max-height: 320px;
+  -webkit-line-clamp: 9;
+  -webkit-box-orient: vertical;
+}
+
+.input-timeline {
+  max-height: inherit;
+}
+
+.timeline-post, .modal.timeline .modal-dialog .modal-content .modal-body {
+  padding: 0;
+  border-bottom: 1px solid #e1e8ee;
+  cursor: pointer;
+  margin-top: 10px;
+  padding-top: 24px;
+  background-color: white;
+}
+
+.timeline-post .input-header, .modal.timeline .modal-dialog .modal-content .modal-body .input-header {
+  background-color: #f0f4f7;
+  padding-left: 20px;
+  margin-bottom: 10px;
+  cursor: auto;
+  margin-top: -24px;
+}
+
+.timeline-post .input-header i, .timeline-post .input-header span, .modal.timeline .modal-dialog .modal-content .modal-body .input-header i, .modal.timeline .modal-dialog .modal-content .modal-body .input-header span {
+  font-size: 14px;
+  line-height: 40px;
+  color: #5e6977;
+  margin: 0;
+  font-weight: 400;
+}
+
+.timeline-post .input-header span, .modal.timeline .modal-dialog .modal-content .modal-body .input-header span {
+  margin-left: 10px;
+}
+
+.timeline-post .picture, .modal.timeline .modal-dialog .modal-content .modal-body .picture {
+  float: left;
+}
+
+.timeline-post .picture img, .modal.timeline .modal-dialog .modal-content .modal-body .picture img {
+  height: 60px;
+  width: 60px;
+  margin-left: 20px;
+  border-radius: 100%;
+  margin-right: 15px;
+}
+
+.timeline-post .post.post-input, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input {
+  margin-bottom: 30px;
+  padding-right: 25px;
+  margin-top: 15px;
+  margin-left: 95px;
+}
+
+.timeline-post .post.post-input textarea, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input textarea {
+  box-shadow: none;
+  border: none;
+  border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+  background-color: transparent;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.44;
+  color: #86939e;
+  margin-bottom: 15px;
+}
+
+.timeline-post .post.post-input .appearing-content, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content {
+  display: none;
+  position: relative;
+}
+
+.timeline-post .post.post-input .appearing-content .upload-photo, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .upload-photo {
+  border: 1px solid rgba(34, 36, 38, 0.15);
+  border-left: none;
+  border-right: none;
+  height: 40px;
+  cursor: pointer;
+  float: left;
+  position: relative;
+}
+
+.timeline-post .post.post-input .appearing-content .upload-photo a, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .upload-photo a {
+  padding: 0 15px;
+  color: #B3B7BD;
+}
+
+.timeline-post .post.post-input .appearing-content .upload-photo a i, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .upload-photo a i {
+  line-height: 40px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui {
+  margin-top: 0 !important;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.scrolling.dropdown, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.scrolling.dropdown {
+  padding: .78571429em 1em .7em 1em;
+  border: 1px solid rgba(34, 36, 38, 0.15) !important;
+  border-radius: 0;
+  height: 40px;
+  float: left;
+  position: relative;
+  margin-bottom: 15px;
+  width: 100%;
+  max-width: 100px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.scrolling.dropdown input.search, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.scrolling.dropdown input.search {
+  padding: 5px 0 !important;
+  margin-left: 15px;
+  padding-top: 3px !important;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.scrolling.dropdown .text:not(.default), .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.scrolling.dropdown .text:not(.default) {
+  left: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  top: -.78571429em;
+  margin-right: 27px;
+  padding: 0;
+  margin-bottom: 0;
+  margin: 0;
+  display: inline;
+  margin-right: 10px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.scrolling.dropdown .text, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.scrolling.dropdown .text {
+  position: relative;
+  top: -15px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.scrolling.dropdown i.dropdown.icon, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.scrolling.dropdown i.dropdown.icon {
+  display: inline;
+  position: relative;
+  top: -15px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown {
+  min-width: 17em;
+  max-width: 17em;
+  background-color: transparent;
+  border: none;
+  height: 40px;
+  border: 1px solid rgba(34, 36, 38, 0.15) !important;
+  border-radius: 0;
+  position: relative;
+  float: left;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown input.search, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown input.search {
+  padding: 5px 0 !important;
+  margin-left: 20px;
+  padding-top: 3px !important;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown i.remove.icon, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown i.remove.icon {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  z-index: 30;
+  display: none;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .text, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .text {
+  margin-left: 15px;
+  top: -1px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .text:not(.default), .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .text:not(.default) {
+  left: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  display: block;
+  top: -2px;
+  margin-right: 27px;
+  padding: 0;
+  margin-bottom: 0;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .text:not(.default) img, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .text:not(.default) img {
+  margin-right: 0 !important;
+  padding: 0 !important;
+  margin-right: 10px !important;
+  margin-bottom: 0;
+  width: auto;
+  max-height: 2em;
+  margin-top: 0;
+  width: 30px;
+  height: 30px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .text:not(.default) span, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .text:not(.default) span {
+  position: relative;
+  top: 2px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .menu .header i span, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .menu .header i span {
+  margin-left: 10px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .menu .item, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .menu .item {
+  padding: 10px !important;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .menu .item img, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .menu .item img {
+  margin-right: 0 !important;
+  padding: 0 !important;
+  margin-right: 10px !important;
+  margin-bottom: 5px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .menu .input, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .menu .input {
+  margin: 0px;
+}
+
+.timeline-post .post.post-input .appearing-content .ui.selection.dropdown .menu .input input, .modal.timeline .modal-dialog .modal-content .modal-body .post.post-input .appearing-content .ui.selection.dropdown .menu .input input {
+  padding: .5em 15px !important;
+  padding-right: 10% !important;
+}
+
+.timeline-post .post h5, .modal.timeline .modal-dialog .modal-content .modal-body .post h5 {
+  font-size: 14px;
+  line-height: 1;
+  color: #5e6977;
+  margin: 0;
+}
+
+.timeline-post .post h5.name, .modal.timeline .modal-dialog .modal-content .modal-body .post h5.name {
+  margin-top: 5px;
+}
+
+.timeline-post .post h5.date, .modal.timeline .modal-dialog .modal-content .modal-body .post h5.date {
+  font-weight: 400;
+  margin-top: 5px;
+  color: #86939e;
+}
+
+.timeline-post .post h5.year-happend, .modal.timeline .modal-dialog .modal-content .modal-body .post h5.year-happend {
+  text-align: right;
+  position: absolute;
+  top: 29px;
+  right: 20px;
+  font-weight: 400;
+  color: #86939e;
+}
+
+.timeline-post .post h5.company, .modal.timeline .modal-dialog .modal-content .modal-body .post h5.company {
+  text-align: right;
+  position: absolute;
+  top: 52px;
+  right: 20px;
+  font-weight: 400;
+  color: #86939e;
+}
+
+.timeline-post .post p, .modal.timeline .modal-dialog .modal-content .modal-body .post p {
+  font-size: 14px;
+  color: #86939e;
+  line-height: 1.71;
+  margin-left: 95px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  padding-right: 15px;
+}
+
+.timeline-post .post .image, .modal.timeline .modal-dialog .modal-content .modal-body .post .image {
+  width: 50%;
+  height: 50%;
+  float: right;
+  padding-left: 25px;
+  margin-top: 20px;
+  margin-right: 15px;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.timeline-post .post .image img, .modal.timeline .modal-dialog .modal-content .modal-body .post .image img {
+  width: 100%;
+  min-height: 50px;
+  max-height: 200px;
+}
+
+.timeline-post .buttons, .modal.timeline .modal-dialog .modal-content .modal-body .buttons {
+  background-color: #f0f4f7;
+  text-align: right;
+  padding: 10px 25px;
+  display: none;
+  clear: both;
+}
+
+.timeline-post .buttons button, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button {
+  font-size: 16px;
+  border-radius: 8px;
+  width: 150px;
+}
+
+.timeline-post .buttons button.btn-cancel, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-cancel {
+  border: 2px solid #e2e7eb;
+  color: #8b949d;
+  margin-right: 15px;
+  background-color: transparent;
+}
+
+.timeline-post .buttons button.btn-cancel:hover, .timeline-post .buttons button.btn-cancel:active, .timeline-post .buttons button.btn-cancel:focus, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-cancel:hover, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-cancel:active, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-cancel:focus {
+  background-color: #eaeef1;
+}
+
+.timeline-post .buttons button.btn-post, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-post {
+  background-color: #76c84a;
+  color: #f7fff1;
+  border: 2px solid #76c84a;
+}
+
+.timeline-post .buttons button.btn-post:hover, .timeline-post .buttons button.btn-post:focus, .timeline-post .buttons button.btn-post:active, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-post:hover, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-post:focus, .modal.timeline .modal-dialog .modal-content .modal-body .buttons button.btn-post:active {
+  background-color: #6fba46;
+  border: 2px solid #6fba46;
+}
+
+.modal.timeline .modal-dialog .modal-content {
+  border-radius: 0;
+}
+
+.modal.timeline .modal-dialog .modal-content .modal-body {
+  border: none;
+  cursor: auto;
+}
+
+.modal.timeline .modal-dialog .modal-content .modal-body i.icon-more {
+  position: absolute;
+  right: 30px;
+  font-size: 22px;
+  color: #bdc6cf;
+  -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  top: 0;
+  cursor: pointer;
+}
+
+.modal.timeline .modal-dialog .modal-content .modal-body .visible-xs i {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  font-size: 22px;
+  color: #bdc6cf;
+  cursor: pointer;
+}
+
+.modal.timeline .modal-dialog .modal-content .modal-body .post .image {
+  width: 100%;
+  height: 100%;
+  float: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  padding-top: 20px;
+  position: relative;
+}
+
+.modal.timeline .modal-dialog .modal-content .modal-body .post .image .items .item img {
+  width: 100%;
+  height: 100%;
+  min-height: auto;
+  max-height: inherit;
+}
+
+.modal.timeline .modal-dialog .modal-content .modal-body .post p {
+  margin: 0;
+  padding: 0 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: justify;
+}
+
+.modal#timelineModalEdit .modal-dialog .modal-content .modal-body {
+  padding: 0;
+}
+
+.modal#timelineModalEdit .modal-dialog .modal-content .modal-body .post {
+  margin-left: 15px;
+  padding-right: 15px;
+}
+
+.modal#timelineModalEdit .modal-dialog .modal-content .modal-body .post .appearing-content {
+  display: inherit;
+}
+
+.modal#timelineModalEdit .modal-dialog .modal-content .modal-body .post .appearing-content .ui .menu .item img {
+  width: inherit;
+  height: inherit;
+  width: auto;
+  max-height: 2em;
+}
+
+.modal#timelineModalEdit .modal-dialog .modal-content .modal-body .buttons {
+  display: inherit;
+}
+
 @media screen and (max-width: 1199px) and (min-width: 992px) {
   section.documentation .container .profile-information-after-fixed .container-fluid {
     width: 970px;
