--- a/ethnode/webui/styles/header.sass
+++ b/ethnode/webui/styles/header.sass
@@ -5,6 +5,19 @@ header .container nav
 
     .navbar-header
 
+        input#search-header
+            border-color: #89ABE3
+
+            &.wrong
+                border-color: #d50000
+
+        button#search-button
+            background-color: #89ABE3
+            color: white
+
+            &.wrong
+                background-color: #d50000
+
         .button
             button.navbar-toggle
                 position: relative
