Updates to gig page and search engine

--- a/ethnode/webui/styles/pages/gigs.sass
+++ b/ethnode/webui/styles/pages/gigs.sass
@@ -34,7 +34,7 @@ section.profiles-page-content
 
 
         // GIGS --- RIGHT
-        .gigs
+        .gigs, .jobs
             float: right
 
             .gigs-container
