--- a/ethnode/webui/styles/header.sass
+++ b/ethnode/webui/styles/header.sass
@@ -7,6 +7,7 @@ header .container nav
 
         input#search-header
             border-color: #89ABE3
+            transition: all .15s linear
 
             &.wrong
                 border-color: #d50000
@@ -14,6 +15,7 @@ header .container nav
         button#search-button
             background-color: #89ABE3
             color: white
+            transition: all .15s linear
 
             &.wrong
                 background-color: #d50000
