Added sliders, changes to load more gigs on scroll down, added suggestions to search engine

--- a/ethnode/webui/styles/main.sass
+++ b/ethnode/webui/styles/main.sass
@@ -7,7 +7,7 @@
 @import "background-image"
 
 
-@import "newstyles/sliders"
+// @import "newstyles/sliders"
 
 // Gigs page content styles
 @import "pages/gigs"
@@ -15,6 +15,7 @@
 // IMPORTING NEW STYLES FOR MODALS
 @import "newstyles/modals"
 @import "newstyles/gig-inner"
+@import "newstyles/sliders"
 
 // Responsiveness
 @import "responsive/screen-medium"
