Fixed reputation slider and removed experience levels

--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -48,20 +48,20 @@ section.gigs-page-content
                     span.mdl-checkbox__label Fixed Price
 
 
-            .filter.experience-level
-                p Experience Level
+            //- .filter.experience-level
+            //-     p Experience Level
 
-                label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-10")
-                    input#checkbox-10.mdl-checkbox__input(type="checkbox")
-                    span.mdl-checkbox__label Entry Level
+            //-     label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-10")
+            //-         input#checkbox-10.mdl-checkbox__input(type="checkbox")
+            //-         span.mdl-checkbox__label Entry Level
 
-                label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-11")
-                    input#checkbox-11.mdl-checkbox__input(type="checkbox")
-                    span.mdl-checkbox__label Intermediate
+            //-     label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-11")
+            //-         input#checkbox-11.mdl-checkbox__input(type="checkbox")
+            //-         span.mdl-checkbox__label Intermediate
 
-                label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-12")
-                    input#checkbox-12.mdl-checkbox__input(type="checkbox")
-                    span.mdl-checkbox__label Expert
+            //-     label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-12")
+            //-         input#checkbox-12.mdl-checkbox__input(type="checkbox")
+            //-         span.mdl-checkbox__label Expert
 
 
             .filter.reputation(style="margin-bottom: 55px")
@@ -72,15 +72,15 @@ section.gigs-page-content
 
                     .range-wrapper-2
                         .range-2
-                        .range-alert-2: span +
+                        //- .range-alert-2: span +
 
                         .gear-wrapper-2
 
-                            .gear-large-2.gear-one-2
-                                .gear-tooth-2
-                                .gear-tooth-2
-                                .gear-tooth-2
-                                .gear-tooth-2
+                            //- .gear-large-2.gear-one-2
+                            //-     .gear-tooth-2
+                            //-     .gear-tooth-2
+                            //-     .gear-tooth-2
+                            //-     .gear-tooth-2
 
                             .gear-large-2.gear-two-2
                                 .gear-tooth-2
@@ -120,32 +120,6 @@ section.gigs-page-content
                     .marker.marker-0: <sup>$</sup>0
                     .marker.marker-50: <sup>$</sup>5,000
                     .marker.marker-100: <sup>$</sup>10,000+
-
-
-
-                //- label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-13")
-                //-     input#checkbox-13.mdl-checkbox__input(type="checkbox")
-                //-     span.mdl-checkbox__label <$100
-
-                //- label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-14")
-                //-     input#checkbox-14.mdl-checkbox__input(type="checkbox")
-                //-     span.mdl-checkbox__label $100 - $500
-
-                //- label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-15")
-                //-     input#checkbox-15.mdl-checkbox__input(type="checkbox")
-                //-     span.mdl-checkbox__label $500 - $1k
-
-                //- label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-16")
-                //-     input#checkbox-16.mdl-checkbox__input(type="checkbox")
-                //-     span.mdl-checkbox__label $1k - $5k
-
-                //- label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-17")
-                //-     input#checkbox-17.mdl-checkbox__input(type="checkbox")
-                //-     span.mdl-checkbox__label $5k - $50k
-
-                //- label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-18")
-                //-     input#checkbox-18.mdl-checkbox__input(type="checkbox")
-                //-     span.mdl-checkbox__label $50k+
 
         .gigs.col-md-9
 
