--- a/ethnode/webui/styles/newstyles/sliders.sass
+++ b/ethnode/webui/styles/newstyles/sliders.sass
@@ -11,6 +11,10 @@ sup
     margin-top: 65px
     margin-left: 13px
 
+    &.slider-wrapper-2 .ui-slider .ui-slider-range
+        border-bottom-left-radius: 100px
+        border-top-left-radius: 100px
+
     .marker, .marker-2
         position: absolute
         top: 100%
@@ -81,9 +85,9 @@ sup
         transform: translateX(-50%)
 
         .range, .range-2
-            background: #fff
+            // background: #fff
             white-space: nowrap
-            border: 1px solid #d2d2d2
+            // border: 1px solid #d2d2d2
             border-radius: 2px
             font-size: 13px
             letter-spacing: 0.02em
@@ -91,6 +95,14 @@ sup
             width: 150px
             z-index: 10
             position: relative
+
+            &.range-2
+                width: 75px
+
+                &:after
+                    border-left: 33px solid transparent
+                    border-right: 33px solid transparent
+                    border-top: 3px solid #d2d2d2
 
             &:after
                 content: ''
@@ -102,33 +114,32 @@ sup
                 border-right: 67px solid transparent
                 border-top: 6px solid #d2d2d2
 
+
+            .range-value:nth-child(1)
+                border-right: none
+
             .range-value, .range-value-2
                 width: 74px
                 padding: 8px 0
                 text-align: center
                 display: inline-block
                 transition: background 0.1s
+                background-color: white
+                border: 1px solid #d2d2d2
 
-            .range-divider, .range-divider-2
-                width: 1px
-                display: inline-block
-
-                &:after
-                    position: absolute
-                    top: 0
-                    left: 50%
-                    width: 1px
-                    height: 100%
-                    background: #d2d2d2
-                    content: ''
+                &.range-value-2 sup i
+                    position: relative
+                    top: 3px
+                    left: -3px
+                    font-size: 12px
 
         .range-alert, .range-alert-2
             width: 16px
             height: 16px
             position: absolute
             top: 50%
-            right: 0
-            transform: translateY(-50%)
+            right: 2px
+            transform: translateY(-51%)
             background: #fff
             border-top-right-radius: 2px
             border-bottom-right-radius: 2px
@@ -143,7 +154,7 @@ sup
                 top: -1px
 
             &.active
-                right: -15px
+                right: -14px
 
 
         .gear-wrapper, .gear-wrapper-2
@@ -156,6 +167,9 @@ sup
             width: 150px
             height: 20px
             overflow: hidden
+
+            &.gear-wrapper-2
+                display: none
 
             .gear-large, .gear-large-2
                 width: 40px
