--- a/ethnode/webui/mixins/pages/gigs.jade
+++ b/ethnode/webui/mixins/pages/gigs.jade
@@ -36,16 +36,16 @@ section.gigs-page-content
                     span.mdl-checkbox__label Assistants
 
 
-            .filter.job-type
-                p Job Type
+            //- .filter.job-type
+            //-     p Job Type
 
-                label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-8")
-                    input#checkbox-8.mdl-checkbox__input(type="checkbox")
-                    span.mdl-checkbox__label Hourly
+            //-     label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-8")
+            //-         input#checkbox-8.mdl-checkbox__input(type="checkbox")
+            //-         span.mdl-checkbox__label Hourly
 
-                label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-9")
-                    input#checkbox-9.mdl-checkbox__input(type="checkbox")
-                    span.mdl-checkbox__label Fixed Price
+            //-     label.mdl-checkbox.mdl-js-checkbox.mdl-js-ripple-effect(for="checkbox-9")
+            //-         input#checkbox-9.mdl-checkbox__input(type="checkbox")
+            //-         span.mdl-checkbox__label Fixed Price
 
 
             //- .filter.experience-level
@@ -64,33 +64,26 @@ section.gigs-page-content
             //-         span.mdl-checkbox__label Expert
 
 
-            .filter.reputation(style="margin-bottom: 55px")
-                p Reputation
+            //- .filter.reputation(style="margin-bottom: 55px")
+            //-     p Reputation
 
-                .slider-wrapper-2
-                    #slider-range-2
+            //-     .slider-wrapper-2
+            //-         #slider-range-2
 
-                    .range-wrapper-2
-                        .range-2
-                        //- .range-alert-2: span +
+            //-         .range-wrapper-2
+            //-             .range-2
 
-                        .gear-wrapper-2
+            //-             .gear-wrapper-2
 
-                            //- .gear-large-2.gear-one-2
-                            //-     .gear-tooth-2
-                            //-     .gear-tooth-2
-                            //-     .gear-tooth-2
-                            //-     .gear-tooth-2
+            //-                 .gear-large-2.gear-two-2
+            //-                     .gear-tooth-2
+            //-                     .gear-tooth-2
+            //-                     .gear-tooth-2
+            //-                     .gear-tooth-2
 
-                            .gear-large-2.gear-two-2
-                                .gear-tooth-2
-                                .gear-tooth-2
-                                .gear-tooth-2
-                                .gear-tooth-2
-
-                    .marker.marker-0: <sup>☦</sup>0
-                    .marker.marker-50: <sup>☦</sup>2,500
-                    .marker.marker-100: <sup>☦</sup>5,000
+            //-         .marker.marker-0: <sup>☦</sup>0
+            //-         .marker.marker-50: <sup>☦</sup>2,500
+            //-         .marker.marker-100: <sup>☦</sup>5,000
 
 
             .filter.budget
